# fast-stringcase

./: .gitignore  pyproject.toml  readme.md  setup.py  test_fast_stringcase.py
.github/workflows/: build.yml  publish.yml
fast_stringcase/: MANIFEST.in  fast_stringcase.c
