[build-system]
requires = ["setuptools >= 77.0.3", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-stringcase"
version = "1.2.0b5"
description = "C extension for string case conversions. The logic is ported from and based on stringcase == 1.2.0"
authors = [
    { name = "Isham Mohamed", email = "isham.iqbal@icloud.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/IshamMohamed/fast-stringcase/"
Download = "https://pypi.org/project/fast-stringcase/"

[tool.setuptools]
packages = ["fast_stringcase"]

[tool.setuptools.package-data]
fast_stringcase = ["fast_stringcase.pyi"]
